# rail_christmas

./: README.md
christmas_state_machine/: CMakeLists.txt  README.md  package.xml  setup.py
christmas_state_machine/config/: robot_params.yaml  simulation_params.yaml
christmas_state_machine/nodes/: state_machine
christmas_state_machine/src/christmas_state_machine/: state_machines.py  states.py
christmas_state_machine/srv/: EndHelp.srv  EndManual.srv
rail_grasp_calculation/rail_grasp_calculation_nodes/launch/: find_grasps.launch
rail_grasp_calculation/rail_grasp_calculation_nodes/src/: GraspSampler.cpp
tree_point_and_click/: CMakeLists.txt  package.xml
tree_point_and_click/include/tree_point_and_click/: clicker.h  generator.h
tree_point_and_click/launch/: tree_demo.launch  tree_demo_frontend.launch
tree_point_and_click/rviz/: tree_pac.rviz
tree_point_and_click/src/: clicker.cpp  generator.cpp
